--- a/configs/imrc_cont_belief.yaml
+++ b/configs/imrc_cont_belief.yaml
@@ -45,7 +45,7 @@ checkpoint:
   load_pretrained: False  # during test, enable this so that the agent load your pretrained model
   load_from_tag: 'not_loading_anything'
   load_parameter_keywords: []
-  load_graph_generation_model_from_tag: 'pretrained_graph_generation_model'
+  load_graph_generation_model_from_tag: 'pretrain_3928a10_model'  # replace this by your own model tag
 
 replay:
   replay_memory_capacity: 500000  # adjust this depending on your RAM size
